fix table overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,9 +97,6 @@ h2 {
     border-radius: 0;
 }
 
-.table-width {
-    max-width: fit-content;
-}
 
 /* Game Library */
 /* No border */
